Fixed Marlin-FX for OpenJFX9 (jigsaw)